--- a/32.Transformer.ipynb
+++ b/32.Transformer.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Transformer 架构\n",
     "\n",
-    "![](md-img\\Transformer.png)"
+    "![](md-img/Transformer.png)"
    ]
   },
   {
@@ -31,6 +31,63 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "44a71396",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch import nn\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ff04fb9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MultiHeadAttention(nn.Module):\n",
+    "    def __init__(self, query_size, key_size, value_size, model_size, num_heads):\n",
+    "        super().__init__()\n",
+    "        self.num_heads = num_heads\n",
+    "        self.linear_q = nn.Linear(query_size, model_size)\n",
+    "        self.linear_k = nn.Linear(key_size, model_size)\n",
+    "        self.linear_v = nn.Linear(value_size, model_size)\n",
+    "        self.softmax = nn.Softmax(dim=-1)\n",
+    "        self.linear_o = nn.Linear(model_size, model_size)\n",
+    "\n",
+    "    # query: (batch_size, num_querys, query_size)\n",
+    "    # key: (batch_size, num_pairs, key_size)\n",
+    "    # value: (batch_size, num_pairs, key_size)\n",
+    "    def forward(self, query, key, value):\n",
+    "        query = self.linear_q(query)    # (batch_size, num_querys, model_size)\n",
+    "        key = self.linear_q(key)        # (batch_size, num_pairs, model_size)\n",
+    "        value = self.linear_q(value)    # (batch_size, num_pairs, model_size)\n",
+    "\n",
+    "        batch_size, num_querys, model_size = query.shape\n",
+    "        num_pairs = key.shape[1]\n",
+    "        dk = model_size / self.num_heads\n",
+    "\n",
+    "        query = query.reshape(batch_size, num_querys, self.num_heads, -1)  # (batch_size, num_querys, num_heads, dk)\n",
+    "        key = key.reshape(batch_size, num_pairs, self.num_heads, -1)       # (batch_size, num_pairs, num_heads, dk)\n",
+    "        value = value.reshape(batch_size, num_pairs, self.num_heads, -1)   # (batch_size, num_pairs, num_heads, dk)\n",
+    "        query = query.permute(0, 2, 1, 3).reshape(batch_size * self.num_heads, num_querys, -1)  # (batch_size * num_heads, num_querys, dk)\n",
+    "        key = key.permute(0, 2, 1, 3).reshape(batch_size * self.num_heads, num_pairs, -1)       # (batch_size * num_heads, num_pairs, dk)\n",
+    "        value = value.permute(0, 2, 1, 3).reshape(batch_size * self.num_heads, num_pairs, -1)   # (batch_size * num_heads, num_pairs, dk)\n",
+    "\n",
+    "        score = torch.bmm(query, key.permute(0, 2, 1)) / math.sqrt(dk)     # (batch_size * num_heads, num_querys, num_pairs)\n",
+    "        weight = self.softmax(score)         # (batch_size * num_heads, num_querys, num_pairs)\n",
+    "        output = torch.bmm(weight, value)    # (batch_size * num_heads, num_querys, dk)\n",
+    "        output = output.reshape(batch_size, self.num_heads, num_querys, -1)    # (batch_size, num_heads, num_querys, dk)\n",
+    "        output = output.permute(0, 2, 1, 3)  # (batch_size, num_querys, num_heads, dk)\n",
+    "        output = output.reshape(batch_size, num_querys, -1)    # (batch_size, num_querys, model_size)\n",
+    "        return self.linear_o(output)     # (batch_size, num_querys, model_size)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0f418538",
    "metadata": {},
@@ -41,6 +98,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24309ab4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FeedForward(nn.Module):\n",
+    "    def __init__(self, model_size, hidden_size):\n",
+    "        super().__init__()\n",
+    "        self.linear1 = nn.Linear(model_size, hidden_size)\n",
+    "        self.relu = nn.ReLU()\n",
+    "        self.linear2 = nn.Linear(hidden_size, model_size)\n",
+    "\n",
+    "    # x: (batch_size, seq_len, model_size)\n",
+    "    def forward(self, x):\n",
+    "        x = self.linear1(x)   # (batch_size, seq_len, hidden_size)\n",
+    "        x = self.relu(x)      # (batch_size, seq_len, hidden_size)\n",
+    "        x = self.linear2(x)   # (batch_size, seq_len, model_size)\n",
+    "        return x"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bf774fec",
    "metadata": {},
@@ -48,6 +127,34 @@
     "<br>\n",
     "\n",
     "### EncoderBlock Module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0215291d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EncoderBlock(nn.Module):\n",
+    "    def __init__(self, model_size, num_heads, hidden_size, dropout):\n",
+    "        super().__init__()\n",
+    "        self.attention = MultiHeadAttention(model_size, model_size, model_size, model_size, num_heads)\n",
+    "        self.ffn = FeedForward(model_size, hidden_size)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        self.norm1 = nn.LayerNorm(model_size)\n",
+    "        self.norm2 = nn.LayerNorm(model_size)\n",
+    "\n",
+    "\n",
+    "    # x: (batch_size, seq_len, model_size)\n",
+    "    def forward(self, x):\n",
+    "        temp = self.attention(x, x, x)\n",
+    "        x = x + self.dropout(temp)\n",
+    "        x = self.norm1(x)\n",
+    "        temp = self.ffn(x)\n",
+    "        x = x + self.dropout(temp)\n",
+    "        x = self.norm2(x)\n",
+    "        return x"
    ]
   },
   {
@@ -69,6 +176,14 @@
     "\n",
     "### MaskedMultiHeadAttention Module"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ac726a2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -102,8 +217,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "pytorch",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
