--- a/6.神经网络的层.ipynb
+++ b/6.神经网络的层.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "1f6da01a",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "60fe4eda",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "9355f31d",
    "metadata": {},
    "outputs": [
@@ -41,22 +41,21 @@
      "data": {
       "text/plain": [
        "(Parameter containing:\n",
-       " tensor([[ 1.6204e-01, -2.0444e-01, -1.2897e-02,  1.6852e-01,  2.9327e-01,\n",
-       "          -1.0507e-01,  8.5197e-02, -8.1483e-02,  1.0794e-01, -1.1018e-01],\n",
-       "         [ 2.7556e-01,  3.5181e-02,  1.7725e-01, -1.5533e-03, -4.9809e-02,\n",
-       "           1.8827e-01, -2.3475e-01,  1.0436e-01,  3.4916e-02, -1.4363e-01],\n",
-       "         [ 1.5250e-01,  3.1006e-01, -1.0069e-01, -3.7223e-02,  2.8846e-01,\n",
-       "           3.1428e-01, -1.3007e-01,  2.4839e-01,  7.2949e-02,  2.2329e-01],\n",
-       "         [ 6.8134e-02, -2.6406e-01,  1.3295e-01, -2.2816e-01,  1.9616e-01,\n",
-       "          -2.9166e-01,  2.7269e-02,  1.4765e-02, -2.2855e-04, -2.2411e-04],\n",
-       "         [ 9.3534e-03, -5.4455e-02, -9.8700e-02, -2.3186e-05, -2.6181e-01,\n",
-       "          -2.8278e-02,  6.2345e-02, -2.1410e-01, -7.6263e-02,  2.3914e-01]],\n",
-       "        requires_grad=True),\n",
+       " tensor([[-0.2355,  0.2675, -0.2939,  0.2603, -0.0859, -0.1308, -0.0644, -0.0422,\n",
+       "          -0.1558,  0.1965],\n",
+       "         [-0.1766,  0.0329, -0.2180, -0.0748, -0.0264,  0.0452, -0.0379,  0.0619,\n",
+       "           0.0035,  0.2743],\n",
+       "         [ 0.1485,  0.2862, -0.2397, -0.0540, -0.0871,  0.1411,  0.1568, -0.1105,\n",
+       "           0.2351,  0.0308],\n",
+       "         [-0.0897, -0.1097, -0.2668, -0.0086,  0.1994, -0.0386, -0.0208,  0.1984,\n",
+       "          -0.2557, -0.1468],\n",
+       "         [ 0.1369,  0.3115,  0.2172,  0.1685, -0.0550,  0.1403,  0.2265,  0.0745,\n",
+       "          -0.2470,  0.2531]], requires_grad=True),\n",
        " Parameter containing:\n",
-       " tensor([ 0.1452, -0.2504,  0.1929,  0.2126,  0.2083], requires_grad=True))"
+       " tensor([ 0.2688, -0.0651,  0.2951,  0.2930,  0.2708], requires_grad=True))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "id": "1bab0109",
    "metadata": {},
    "outputs": [
@@ -99,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "4b6083d8",
    "metadata": {},
    "outputs": [],
@@ -112,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "id": "cc681f42",
    "metadata": {},
    "outputs": [
@@ -143,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "id": "fd6eb022",
    "metadata": {},
    "outputs": [
@@ -175,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "id": "af243567",
    "metadata": {},
    "outputs": [],
@@ -189,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "id": "64f9f4a3",
    "metadata": {},
    "outputs": [
@@ -197,9 +196,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.5016, 0.1687, 0.1253, 0.0173, 0.1146, 0.0726],\n",
-      "        [0.0908, 0.0475, 0.0767, 0.3466, 0.3754, 0.0630],\n",
-      "        [0.3311, 0.1088, 0.0659, 0.0915, 0.1738, 0.2288]])\n"
+      "tensor([[0.2039, 0.0245, 0.4770, 0.1043, 0.1092, 0.0811],\n",
+      "        [0.1341, 0.1709, 0.4744, 0.0226, 0.0254, 0.1726],\n",
+      "        [0.2263, 0.2155, 0.3269, 0.0577, 0.1165, 0.0571]])\n"
      ]
     }
    ],
@@ -211,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "id": "3712b7ab",
    "metadata": {},
    "outputs": [
@@ -221,7 +220,7 @@
        "tensor([1.0000, 1.0000, 1.0000])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "id": "f3552304",
    "metadata": {},
    "outputs": [],
@@ -264,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "id": "9bb6479d",
    "metadata": {},
    "outputs": [
@@ -272,88 +271,88 @@
      "data": {
       "text/plain": [
        "(Parameter containing:\n",
-       " tensor([[[[ 0.1534,  0.1777, -0.1103],\n",
-       "           [ 0.1747,  0.1320, -0.0668],\n",
-       "           [ 0.1125,  0.1222,  0.1434]],\n",
+       " tensor([[[[ 0.1351, -0.1173,  0.0559],\n",
+       "           [ 0.0990,  0.0574,  0.0680],\n",
+       "           [-0.0063, -0.0274,  0.0987]],\n",
        " \n",
-       "          [[ 0.0575,  0.1118, -0.1237],\n",
-       "           [ 0.1854,  0.1912,  0.0103],\n",
-       "           [ 0.0679,  0.0738,  0.1576]],\n",
+       "          [[ 0.1488, -0.0757,  0.0924],\n",
+       "           [ 0.1281, -0.0803, -0.0116],\n",
+       "           [ 0.0384,  0.1266, -0.1306]],\n",
        " \n",
-       "          [[ 0.1380, -0.1378,  0.0348],\n",
-       "           [ 0.0352,  0.0284, -0.0085],\n",
-       "           [-0.0561, -0.1280, -0.0003]]],\n",
-       " \n",
-       " \n",
-       "         [[[ 0.0097,  0.1286, -0.0472],\n",
-       "           [-0.1360,  0.0547,  0.1376],\n",
-       "           [-0.1850, -0.1543,  0.1505]],\n",
-       " \n",
-       "          [[ 0.1173,  0.1756, -0.1196],\n",
-       "           [-0.0359, -0.0743, -0.1007],\n",
-       "           [-0.0190,  0.0543,  0.1252]],\n",
-       " \n",
-       "          [[ 0.1004, -0.1186,  0.0975],\n",
-       "           [ 0.0920,  0.1349, -0.0147],\n",
-       "           [ 0.1074, -0.0073, -0.0664]]],\n",
+       "          [[-0.0797, -0.0502,  0.0239],\n",
+       "           [ 0.1057,  0.0533, -0.1075],\n",
+       "           [-0.0707, -0.0815,  0.0532]]],\n",
        " \n",
        " \n",
-       "         [[[-0.0838,  0.1028, -0.0808],\n",
-       "           [ 0.1042,  0.0259,  0.1161],\n",
-       "           [ 0.0499, -0.0709, -0.0811]],\n",
+       "         [[[ 0.1221, -0.1029,  0.0693],\n",
+       "           [ 0.0113, -0.1001, -0.0091],\n",
+       "           [ 0.0993, -0.0327, -0.0429]],\n",
        " \n",
-       "          [[-0.0486,  0.1491, -0.0394],\n",
-       "           [ 0.0668,  0.1419,  0.1181],\n",
-       "           [-0.1490,  0.1301,  0.0951]],\n",
+       "          [[ 0.0732, -0.1477,  0.1337],\n",
+       "           [ 0.0099, -0.1304, -0.1820],\n",
+       "           [-0.1756,  0.0518, -0.1146]],\n",
        " \n",
-       "          [[-0.1797, -0.1636,  0.0954],\n",
-       "           [ 0.0919,  0.1085,  0.0832],\n",
-       "           [-0.0826, -0.1195, -0.1362]]],\n",
-       " \n",
-       " \n",
-       "         [[[-0.1805, -0.0471, -0.0740],\n",
-       "           [-0.0478,  0.0401, -0.1829],\n",
-       "           [ 0.0829,  0.0025,  0.1409]],\n",
-       " \n",
-       "          [[-0.0768,  0.0043, -0.1860],\n",
-       "           [ 0.0355, -0.1059, -0.1870],\n",
-       "           [-0.1614,  0.0115,  0.1024]],\n",
-       " \n",
-       "          [[-0.1575,  0.1761, -0.0397],\n",
-       "           [ 0.1280, -0.0839,  0.0309],\n",
-       "           [ 0.0748, -0.1750,  0.0097]]],\n",
+       "          [[ 0.0733,  0.0408,  0.0644],\n",
+       "           [-0.0865,  0.1839, -0.0496],\n",
+       "           [-0.1213, -0.0256, -0.0917]]],\n",
        " \n",
        " \n",
-       "         [[[ 0.1778, -0.1494, -0.0943],\n",
-       "           [-0.0589,  0.1714, -0.1534],\n",
-       "           [-0.1252, -0.0973,  0.0036]],\n",
+       "         [[[ 0.1539, -0.1328, -0.0516],\n",
+       "           [-0.1097, -0.1562, -0.0303],\n",
+       "           [ 0.0979,  0.1096,  0.1317]],\n",
        " \n",
-       "          [[-0.0954,  0.1802,  0.1549],\n",
-       "           [-0.0187,  0.0417, -0.0036],\n",
-       "           [ 0.1178, -0.1762,  0.1783]],\n",
+       "          [[-0.0895,  0.0556,  0.1214],\n",
+       "           [-0.1729, -0.1597,  0.1682],\n",
+       "           [ 0.0849, -0.0089, -0.0941]],\n",
        " \n",
-       "          [[ 0.1637, -0.1733,  0.0855],\n",
-       "           [ 0.0357, -0.0371,  0.1837],\n",
-       "           [-0.1611,  0.0507,  0.1268]]],\n",
+       "          [[ 0.0509,  0.0062,  0.0303],\n",
+       "           [-0.0811,  0.1219, -0.0761],\n",
+       "           [ 0.0759, -0.1855,  0.1417]]],\n",
        " \n",
        " \n",
-       "         [[[ 0.0519,  0.1405,  0.1724],\n",
-       "           [-0.0506, -0.0422,  0.1046],\n",
-       "           [-0.1658,  0.0858, -0.1541]],\n",
+       "         [[[ 0.1741, -0.1588,  0.1260],\n",
+       "           [-0.0549, -0.1071,  0.0833],\n",
+       "           [ 0.0317,  0.0015,  0.0794]],\n",
        " \n",
-       "          [[ 0.1094,  0.0984, -0.1540],\n",
-       "           [ 0.0777,  0.1042,  0.1323],\n",
-       "           [-0.0895,  0.0940,  0.1432]],\n",
+       "          [[-0.0555,  0.1156, -0.1415],\n",
+       "           [ 0.0604, -0.0337, -0.1862],\n",
+       "           [-0.0522,  0.1478,  0.0672]],\n",
        " \n",
-       "          [[ 0.1104, -0.0487,  0.1052],\n",
-       "           [ 0.0454, -0.0472,  0.0717],\n",
-       "           [-0.1404,  0.1318, -0.1542]]]], requires_grad=True),\n",
+       "          [[ 0.1107,  0.1767,  0.0542],\n",
+       "           [ 0.0131, -0.1837,  0.0859],\n",
+       "           [ 0.0260, -0.0908,  0.1333]]],\n",
+       " \n",
+       " \n",
+       "         [[[-0.0042,  0.1303,  0.0656],\n",
+       "           [ 0.1749, -0.1091, -0.0851],\n",
+       "           [ 0.0582, -0.1654,  0.1515]],\n",
+       " \n",
+       "          [[ 0.1201, -0.1427, -0.1028],\n",
+       "           [-0.0566,  0.1220, -0.0715],\n",
+       "           [-0.0228, -0.0738, -0.0080]],\n",
+       " \n",
+       "          [[ 0.1108, -0.1734,  0.0226],\n",
+       "           [ 0.0313, -0.1330,  0.0958],\n",
+       "           [-0.1487,  0.0020, -0.0765]]],\n",
+       " \n",
+       " \n",
+       "         [[[-0.0607, -0.0885,  0.0027],\n",
+       "           [-0.0502,  0.0014, -0.0215],\n",
+       "           [ 0.0009, -0.1326, -0.0704]],\n",
+       " \n",
+       "          [[-0.0507,  0.0593, -0.0578],\n",
+       "           [-0.1525,  0.1127,  0.1586],\n",
+       "           [ 0.1623,  0.0971,  0.0699]],\n",
+       " \n",
+       "          [[-0.0177, -0.0948,  0.1865],\n",
+       "           [-0.0480, -0.1146, -0.1431],\n",
+       "           [-0.1132, -0.1229,  0.0487]]]], requires_grad=True),\n",
        " Parameter containing:\n",
-       " tensor([ 0.1599, -0.1401,  0.0749,  0.1140, -0.1643, -0.0083],\n",
+       " tensor([ 0.1876, -0.0077, -0.0170, -0.0379,  0.0766,  0.0207],\n",
        "        requires_grad=True))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "id": "8de5940e",
    "metadata": {},
    "outputs": [
@@ -395,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "id": "d5807565",
    "metadata": {},
    "outputs": [],
@@ -417,32 +416,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "id": "7cbe6f3e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[[[-0.8901,  1.4404, -0.1949],\n",
-       "          [-0.9262,  2.0766, -0.0273],\n",
-       "          [ 1.5320,  0.3519,  0.0425]],\n",
+       "tensor([[[[ 0.5825, -0.5555, -0.1655],\n",
+       "          [ 2.1773,  0.5176,  0.2473],\n",
+       "          [-2.0066,  0.7154,  1.1815]],\n",
        "\n",
-       "         [[-0.1658,  0.3645, -0.6759],\n",
-       "          [ 0.0734, -1.3039, -0.4407],\n",
-       "          [-2.2038, -0.2539,  0.8688]]],\n",
+       "         [[-0.1344,  0.7696, -0.1264],\n",
+       "          [-0.8483,  0.6956, -0.3064],\n",
+       "          [-0.7610,  0.2390, -0.0809]]],\n",
        "\n",
        "\n",
-       "        [[[ 2.1428, -1.0313,  1.2831],\n",
-       "          [ 1.4973, -0.2758,  0.3096],\n",
-       "          [-1.3119, -0.1408,  0.5046]],\n",
+       "        [[[ 0.4137, -1.1263,  0.9501],\n",
+       "          [-0.5783,  0.0638,  0.7853],\n",
+       "          [ 1.0699, -1.7613, -0.0602]],\n",
        "\n",
-       "         [[ 0.6676,  0.3295, -0.1464],\n",
-       "          [-1.2856, -0.8622, -0.3977],\n",
-       "          [-0.0124, -1.2191, -1.3990]]]])"
+       "         [[-0.5682, -1.0803, -0.2424],\n",
+       "          [-0.6876,  1.2280, -1.7699],\n",
+       "          [ 1.1600,  0.5254, -0.0061]]]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "id": "2f5fa4c6",
    "metadata": {},
    "outputs": [
@@ -468,21 +467,21 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[[[ 2.0766,  2.0766],\n",
-       "          [ 2.0766,  2.0766]],\n",
+       "tensor([[[[2.1773, 0.5176],\n",
+       "          [2.1773, 1.1815]],\n",
        "\n",
-       "         [[ 0.3645,  0.3645],\n",
-       "          [ 0.0734,  0.8688]]],\n",
+       "         [[0.7696, 0.7696],\n",
+       "          [0.6956, 0.6956]]],\n",
        "\n",
        "\n",
-       "        [[[ 2.1428,  1.2831],\n",
-       "          [ 1.4973,  0.5046]],\n",
+       "        [[[0.4137, 0.9501],\n",
+       "          [1.0699, 0.7853]],\n",
        "\n",
-       "         [[ 0.6676,  0.3295],\n",
-       "          [-0.0124, -0.3977]]]])"
+       "         [[1.2280, 1.2280],\n",
+       "          [1.2280, 1.2280]]]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "id": "327ee5d2",
    "metadata": {},
    "outputs": [],
@@ -518,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "ae0ae08f",
    "metadata": {},
    "outputs": [
@@ -548,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 47,
    "id": "c5c06ec3",
    "metadata": {},
    "outputs": [],
@@ -562,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 48,
    "id": "3fcae6d5",
    "metadata": {},
    "outputs": [
@@ -592,11 +591,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "4f4dbf41",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 可以接受任意形状的输入，按照 p 概率对每一个位置的数据进行置零\n",
+    "# 然后对于保留下来的数据进行拉伸（除 1 - dropout），保持数据的期望\n",
+    "dropout = torch.nn.Dropout(p=0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "747591bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[ 0.1443, -2.0384],\n",
+      "         [ 1.0388, -0.6286]],\n",
+      "\n",
+      "        [[ 0.9508, -0.5222],\n",
+      "         [ 0.1518, -0.8859]]])\n",
+      "tensor([[[ 0.2887, -0.0000],\n",
+      "         [ 2.0777, -1.2572]],\n",
+      "\n",
+      "        [[ 1.9016, -0.0000],\n",
+      "         [ 0.0000, -1.7718]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "dropout.train()\n",
+    "x = torch.randn(2, 2, 2)\n",
+    "print(x)\n",
+    "print(dropout(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "ffae18ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[ 0.1443, -2.0384],\n",
+      "         [ 1.0388, -0.6286]],\n",
+      "\n",
+      "        [[ 0.9508, -0.5222],\n",
+      "         [ 0.1518, -0.8859]]])\n",
+      "tensor([[[ 0.1443, -2.0384],\n",
+      "         [ 1.0388, -0.6286]],\n",
+      "\n",
+      "        [[ 0.9508, -0.5222],\n",
+      "         [ 0.1518, -0.8859]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 在训练时 Dropout 层处理如上\n",
+    "# 但在测试时，Dropout 层不做任何处理\n",
+    "dropout.eval()\n",
+    "print(x)\n",
+    "print(dropout(x))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -610,12 +674,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "116c489a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.nn.modules.batchnorm.BatchNorm1d"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "torch.nn.BatchNorm1d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7108cb8e",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "### LayerNorm层"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "090d4876",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[[ 0.,  1.,  2.],\n",
+      "          [ 3.,  4.,  5.]],\n",
+      "\n",
+      "         [[ 6.,  7.,  8.],\n",
+      "          [ 9., 10., 11.]]],\n",
+      "\n",
+      "\n",
+      "        [[[12., 13., 14.],\n",
+      "          [15., 16., 17.]],\n",
+      "\n",
+      "         [[18., 19., 20.],\n",
+      "          [21., 22., 23.]]]])\n",
+      "tensor([[[[-1.2247,  0.0000,  1.2247],\n",
+      "          [-1.2247,  0.0000,  1.2247]],\n",
+      "\n",
+      "         [[-1.2247,  0.0000,  1.2247],\n",
+      "          [-1.2247,  0.0000,  1.2247]]],\n",
+      "\n",
+      "\n",
+      "        [[[-1.2247,  0.0000,  1.2247],\n",
+      "          [-1.2247,  0.0000,  1.2247]],\n",
+      "\n",
+      "         [[-1.2247,  0.0000,  1.2247],\n",
+      "          [-1.2247,  0.0000,  1.2247]]]], grad_fn=<NativeLayerNormBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "norm = torch.nn.LayerNorm(3)\n",
+    "x = torch.arange(24).reshape(2, 2, 2, 3).type(torch.float32)\n",
+    "print(x)\n",
+    "print(norm(x))"
    ]
   },
   {
@@ -630,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "id": "2eb625d5",
    "metadata": {},
    "outputs": [
@@ -638,7 +767,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(1.1662)\n"
+      "tensor(1.3262)\n"
      ]
     }
    ],
@@ -668,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "id": "f061a21f",
    "metadata": {},
    "outputs": [
@@ -720,7 +849,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.8.20"
   }
  },
  "nbformat": 4,
